--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,5 +20,7 @@ stages:          # List of stages for jobs, and their order of execution
   - build
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
+  tags:
+    - toolapp
   script:
     - wget "https://www.rdonly.com/wp-content/uploads/2022/08/2022-8-26-1661526061588-1.png"
