--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,5 +24,5 @@ publish-job:       # This job runs in the build stage, which runs first.
     - toolapp
   script:
     - cd /home/ToolApp/
-    - git pull gitlab master
-    - systemctl restart toolapp
+    - sudo git pull gitlab master
+    - sudo systemctl restart toolapp
