优惠券查询

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AllianceService": {
+    "GetTaobaoGoods": "http://localhost:5280/Api/Taobao/GetTaobaoGoods"
+  }
 }
