--- a/ToolApp.csproj
+++ b/ToolApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -6,6 +6,14 @@
 
   <ItemGroup>
     <Content Remove="Pages\Shared\_ValidationScriptsPartial.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Content\TableTools\MimeType.md" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Content\TableTools\MimeType.md" />
   </ItemGroup>
 
   <ItemGroup>
@@ -67,6 +75,15 @@
     <None Include="wwwroot\BackImg\selecticon.html" />
     <None Include="wwwroot\BackImg\sogousiteverification.txt" />
     <None Include="wwwroot\BackImg\todo.md" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Markdig" Version="0.32.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.21" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Content\新文件夹\" />
   </ItemGroup>
 
 </Project>
