--- a/ToolApp.csproj
+++ b/ToolApp.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -78,8 +78,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Markdig" Version="0.32.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.21" />
+    <PackageReference Include="Markdig" Version="0.35.0" />
+    <PackageReference Include="Masa.Blazor" Version="1.3.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.2" />
   </ItemGroup>
 
 </Project>
