--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "AllianceService": {
-    "GetTaobaoGoods": "http://localhost:5280/Api/Taobao/GetTaobaoGoods"
-  }
+  "Urls": "http://*:5220"
 }
